adding all untracked changes

--- a/testfiles/index00.html
+++ b/testfiles/index00.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html data-ng-app="samples">
-<head>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" data-ng-app="samples">
+  <head>
+    <meta charset="utf-8">
+    <!-- If you delete this meta tag World War Z will become a reality -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AngularJS Demos</title>
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="Content/bootstrap-responsive.min.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="../Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="../Content/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="../css/styles.css" rel="stylesheet" />
 </head>
 <body data-ng-controller="samplesController">
     <h2>
@@ -29,9 +33,9 @@
         </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/angular.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/angular.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <script>
         var urlBase = '/Partials/';
