--- a/testfiles/index02.html
+++ b/testfiles/index02.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html ng-app>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" ng-app>
   <head>
+    <meta charset="utf-8">
+    <!-- If you delete this meta tag World War Z will become a reality -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angular JS Hello World</title>
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <!--
     ng-cloak
@@ -11,14 +15,14 @@
     ng-class
     ng-show
   -->
-  <body ng-init="data={name:'Jeremy Wilson', isVisible: true, loggedIn: true, status: 'red'}">
+  <body ng-init="data={name:'Jeremy Wilson', isVisible: true, loggedIn: true, status: 'Single'}">
     <section>
       <div class="section" ng-cloak>
         <div ng-switch on="data.loggedIn">
-          <div ng-switch-when="true" ng-class="data.status">
+          <div ng-switch-when="true">
             Welcome {{ data.name }}
           </div>
-          <div ng-switch-default ng-class="data.status">Login</div>
+          <div ng-switch-default>Login</div>
           <div class="section">
             <div  ng-show="data.isVisible">
               Name: <input type="text" ng-model="data.name"/><br />
