--- a/testfiles/index05.html
+++ b/testfiles/index05.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html ng-app>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" ng-app>
   <head>
+    <meta charset="utf-8">
+    <!-- If you delete this meta tag World War Z will become a reality -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iterating Over Data</title>
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <!--
     ng-cloak
